# LowStream-1

./: Cargo.toml  LICENSE  README.md  home.rs  index.html  index.scss  main.rs  manifest.webmanifest  post.rs  posts.rs  style.css
DB/: videos.json
src/: carousel.rs  content.rs  data.rs  home.rs  main.rs  register.rs  switch.rs
src/components/: box_players.rs  card.rs  carousel.rs  mod.rs  pagination.rs  video.rs  view_content.rs  view_ecchi.rs  view_romance.rs  view_shounen.rs
src/data/: Cards.json  images.json  nsfw.json
src/pages/: Animes.json  Cards.json  carousel.rs  home.rs  login.rs  mod.rs  nsfw.rs  page_not_found.rs  player.rs  post.rs  posts.rs  register.rs  search.rs  videos.json
src/scripts/: mal_api.py  scraping.py
static/: wasm_bg.wasm
styles/: index.scss  style.css
