[package]
name = "LowStream"
version = "0.1.0"
authors = ["andre <andrecastanhal@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
lipsum = "0.7"
log = "0.4"
rand = { version = "0.7", features = ["small_rng", "wasm-bindgen"] }
wasm-logger = "0.2"
yew = "0.17.4"
yew-router = "0.14.0"
yewtil = "0.3.2"
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
