[package]
name = "LowStream"
version = "0.1.0"
authors = ["andre <andrecastanhal@gmail.com>"]
edition = "2018"

[dependencies]
# instant = { version = "0.1", features = ["wasm-bindgen"] }
# lipsum = "0.7"
log = "0.4"
# rand = { version = "0.7", features = ["small_rng", "wasm-bindgen"] }
serde = "1.0.118"
serde_json="1.0.60"
wasm-logger = "0.2"
yew = "0.17.4"
yew-router = "0.14.0"
yewtil = "0.3.2"
wasm-bindgen = "0.2.63"
anyhow = "1.0.35"
console_error_panic_hook = { version = "0.1.6", optional = true }
# wee_alloc = { version = "0.4.5", optional = true }
# ybc = "0.1.6"
# serde_derive = "1"
