[package]
name = "LowStream"
categories = ["wasm"]
description = "Aplicacao de streaming performatica e de baixo custo de hardware"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/LowStream-Community/LowStream"
version = "0.1.0"
authors = ["andre <andrecastanhal@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.14"
futures = "0.3.12"
rand = { version = "*", features = ["small_rng", "wasm-bindgen"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json="1.0.61"
wasm-logger = "0.2"
yew = "0.17.4"
yew-router = "0.14.0"
yewtil = "0.3.2"
enclose = "1.1.8"
wasm-bindgen = "0.2.70"
anyhow = "1.0.38"
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.47"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]